Add product and category management with REST APIs and static admin pages

--- a/src/main/resources/static/products/index.html
+++ b/src/main/resources/static/products/index.html
@@ -1,56 +1,59 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Products</title>
-    <link rel="stylesheet"
-          href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+  <title>Products</title>
 </head>
-<body class="container mt-4">
+<body>
 
 <h2>Products</h2>
+<a href="create.html">Add Product</a>
 
-<a href="create.html" class="btn btn-primary mb-3">Add Product</a>
-
-<table class="table table-bordered">
-    <thead>
+<table border="1">
+  <thead>
     <tr>
-        <th>Name</th>
-        <th>Price</th>
-        <th>Stock</th>
-        <th>Actions</th>
+      <th>Name</th>
+      <th>Price</th>
+      <th>Category</th>
+      <th>Actions</th>
     </tr>
-    </thead>
-    <tbody id="productTable"></tbody>
+  </thead>
+  <tbody id="productTable"></tbody>
 </table>
 
 <script>
-    fetch('/products')
-        .then(res => res.json())
-        .then(data => {
-            const table = document.getElementById('productTable');
-            data.forEach(p => {
-                table.innerHTML += `
-                    <tr>
-                        <td>${p.name}</td>
-                        <td>${p.price}</td>
-                        <td>${p.stock}</td>
-                        <td>
-                            <a href="edit.html?id=${p.id}"
-                               class="btn btn-sm btn-warning">Edit</a>
-                            <button class="btn btn-sm btn-danger"
-                                onclick="deleteProduct('${p.id}')">Delete</button>
-                        </td>
-                    </tr>
-                `;
-            });
-        });
+function loadProducts() {
+  fetch("/api/products")
+    .then(res => res.json())
+    .then(data => {
+      const table = document.getElementById("productTable");
+      table.innerHTML = "";
+      data.forEach(p => {
+        table.innerHTML += `
+          <tr>
+            <td>${p.name}</td>
+            <td>${p.price}</td>
+            <td>${p.category ?? "-"}</td>
+            <td>
+              <a href="edit.html?id=${p.id}">Edit</a>
+              |
+              <button onclick="deleteProduct(${p.id})">Delete</button>
+            </td>
+          </tr>`;
+      });
+    });
+}
 
-    function deleteProduct(id) {
-        if (!confirm("Delete product?")) return;
+function deleteProduct(id) {
+  if (!confirm("Are you sure you want to delete this product?")) return;
 
-        fetch('/products/' + id, { method: 'DELETE' })
-            .then(() => location.reload());
-    }
+  fetch(`/api/products/${id}`, {
+    method: "DELETE"
+  }).then(() => {
+    loadProducts(); // 🔥 refresh table
+  });
+}
+
+loadProducts();
 </script>
 
 </body>
