--- a/src/main/resources/static/products/create.html
+++ b/src/main/resources/static/products/create.html
@@ -1,72 +1,59 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Create Product</title>
-    <link rel="stylesheet"
-          href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+  <title>Add Product</title>
 </head>
-<body class="container mt-4">
+<body>
 
-<h2>Create Product</h2>
+<h2>Add Product</h2>
 
 <form id="productForm">
-    <input class="form-control mb-2" placeholder="Name" id="name" required>
+  <input id="name" placeholder="Product Name" /><br>
+  <input id="price" type="number" placeholder="Price" /><br>
+  <input id="stock" type="number" placeholder="stock" /><br>
+  <input id="description" placeholder="description" /><br>
+  
+  <label for="category">Category:</label>
+  <select id="category"></select><br><br>
 
-    <textarea class="form-control mb-2"
-              placeholder="Description"
-              id="description"></textarea>
-
-    <input class="form-control mb-2"
-           type="number"
-           placeholder="Price"
-           id="price"
-           step="0.01"
-           required>
-
-    <input class="form-control mb-2"
-           type="number"
-           placeholder="Stock"
-           id="stock"
-           required>
-
-    <select class="form-select mb-2" id="categoryId" required>
-        <option value="">-- Select Category --</option>
-    </select>
-
-    <button class="btn btn-success">Save</button>
-    <a href="index.html" class="btn btn-secondary">Cancel</a>
+  <button type="submit">Save</button>
 </form>
 
 <script>
-    // 1️⃣ Load categories into dropdown
-    fetch('/categories')
-        .then(res => res.json())
-        .then(categories => {
-            const dropdown = document.getElementById('categoryId');
-            categories.forEach(c => {
-                dropdown.innerHTML +=
-                    `<option value="${c.categoryId}">
-                        ${c.categoryTitle}
-                     </option>`;
-            });
-        });
-
-    // 2️⃣ Submit product
-    document.getElementById('productForm').addEventListener('submit', function (e) {
-        e.preventDefault();
-
-        fetch('/products', {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({
-                name: document.getElementById('name').value,
-                description: document.getElementById('description').value,
-                price: document.getElementById('price').value,
-                stock: document.getElementById('stock').value,
-                categoryId: document.getElementById('categoryId').value
-            })
-        }).then(() => window.location = 'index.html');
+// load categories
+fetch("/api/categories")
+  .then(res => res.json())
+  .then(categories => {
+    const select = document.getElementById("category");
+    categories.forEach(c => {
+      select.innerHTML += `<option value="${c.categoryId}">${c.categoryTitle}</option>`;
     });
+  });
+
+// submit product
+document.getElementById("productForm").addEventListener("submit", e => {
+  e.preventDefault();
+
+  const nameEl = document.getElementById("name");
+  const priceEl = document.getElementById("price");
+  const stockEl = document.getElementById("stock");
+  const descEl = document.getElementById("description");
+  const categoryEl = document.getElementById("category");
+
+  fetch("/api/products", {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({
+      name: nameEl.value,
+      price: priceEl.value,
+      stock: stockEl.value,
+      description: descEl.value,
+      categoryId: categoryEl.value
+    })
+  }).then(() => {
+    window.location.href = "index.html";
+  });
+});
 </script>
 
 </body>
