--- a/src/main/resources/static/products/edit.html
+++ b/src/main/resources/static/products/edit.html
@@ -1,86 +1,61 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Edit Product</title>
-    <link rel="stylesheet"
-          href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+  <title>Edit Product</title>
 </head>
-<body class="container mt-4">
+<body>
 
 <h2>Edit Product</h2>
 
-<form id="productForm">
-    <input class="form-control mb-2" id="name" required>
+<form id="editForm">
+  <input id="name" /><br>
+  <input id="price" type="number" /><br>
+  <input id="stock" type="number" /><br>
+  <input id="active" /><br>
 
-    <textarea class="form-control mb-2"
-              id="description"></textarea>
+  <select id="category"></select><br><br>
 
-    <input class="form-control mb-2"
-           type="number"
-           id="price"
-           step="0.01"
-           required>
-
-    <input class="form-control mb-2"
-           type="number"
-           id="stock"
-           required>
-
-    <!-- 🔥 MUST be select -->
-    <select class="form-select mb-2" id="categoryId" required>
-        <option value="">-- Select Category --</option>
-    </select>
-
-    <button class="btn btn-success">Update</button>
-    <a href="index.html" class="btn btn-secondary">Cancel</a>
+  <button>Update</button>
 </form>
 
 <script>
-    const id = new URLSearchParams(window.location.search).get('id');
+const id = new URLSearchParams(window.location.search).get("id");
 
-    // 1️⃣ Load categories
-    fetch('/categories')
-        .then(res => res.json())
-        .then(categories => {
-            const dropdown = document.getElementById('categoryId');
-
-            categories.forEach(c => {
-                dropdown.innerHTML +=
-                    `<option value="${c.categoryId}">
-                        ${c.categoryTitle}
-                     </option>`;
-            });
-
-            // 2️⃣ Load product after categories
-            return fetch('/products/' + id);
-        })
-        .then(res => res.json())
-        .then(p => {
-            document.getElementById('name').value = p.name;
-            document.getElementById('description').value = p.description;
-            document.getElementById('price').value = p.price;
-            document.getElementById('stock').value = p.stock;
-            document.getElementById('categoryId').value = p.categoryId;
-        });
-
-    // 3️⃣ Submit update
-    document.getElementById('productForm')
-        .addEventListener('submit', function (e) {
-
-        e.preventDefault();
-
-        fetch('/products/' + id, {
-            method: 'PUT',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({
-                name: document.getElementById('name').value,
-                description: document.getElementById('description').value,
-                price: document.getElementById('price').value,
-                stock: document.getElementById('stock').value,
-                categoryId: document.getElementById('categoryId').value
-            })
-        }).then(() => window.location = 'index.html');
+// 1️⃣ Load categories first
+fetch("/api/categories")
+  .then(res => res.json())
+  .then(categories => {
+    const select = document.getElementById("category");
+    categories.forEach(c => {
+      select.innerHTML += `<option value="${c.categoryId}">${c.categoryTitle}</option>`;
     });
+
+    // 2️⃣ Load product after categories
+    return fetch(`/api/products/${id}`);
+  })
+  .then(res => res.json())
+  .then(p => {
+    name.value = p.name;
+    price.value = p.price;
+    category.value = p.category_id; // 🔥 preselect
+  });
+
+// update product
+document.getElementById("editForm").addEventListener("submit", e => {
+  e.preventDefault();
+
+  fetch(`/api/products/${id}`, {
+    method: "PUT",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({
+      name: name.value,
+      price: price.value,
+      categoryId: category.value
+    })
+  }).then(() => {
+    window.location.href = "index.html";
+  });
+});
 </script>
 
 </body>
